<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reto-ciberfisicos</name>
  <version>1.0.0</version>

  <description>Package for autonomous navigation with Lightweight frontier-based exploration ROS2 port.</description>
  <license>Apache License 2.0</license>

  <author email="rafal.gorecki@husarion.com">Rafal Gorecki</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ament_cmake</depend>
  <depend>map_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>tf2</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>find_object_2d</depend>
  <depend>libopencv-dev</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <depend>nav2_map_server</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>